--- a/PocketRoamingHTML/index.html
+++ b/PocketRoamingHTML/index.html
@@ -18,20 +18,74 @@
             </a>
             <ul class="nav nav-pills me-auto te mx-1">
                 <!-- nav nav-pills -->
+                <!-- data-bs-toggle="pill" -->
                 <li class="nav-item">
-                  <a class="nav-link text-white" data-bs-toggle="pill" href="#">Link</a>
+                  <a class="nav-link text-white" href="#">Link</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white" data-bs-toggle="pill" href="#">Link</a>
-                </li>
+                  <a class="nav-link text-white"  href="#">Link</a>
+                </li>                
                 <li class="nav-item">
-                  <a class="nav-link text-white" data-bs-toggle="pill" href="#">Link</a>
+                  <a class="nav-link text-white"  href="./html/member.html">會員</a>
                 </li>
             </ul>
             <!-- 靠右 -->
             <div class="d-flex">
-                <div>
-                    <span>登入|註冊</span>
+                <div class="btn-group" role="group">
+                    <!-- 第一顆按鈕 -->
+                        <button type="button" class="btn btn-primary " data-bs-toggle="modal" data-bs-target="#staticBackdrop">登入</button>
+                        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <h5 class="modal-title text-dark" id="staticBackdropLabel">登入</h5>
+                                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                    <form class="text-dark">
+                                        <div class="modal-body">
+                                            <label class="mx-2 my-1">帳號</label>
+                                            <input class="mx-2 my-1" type="text"><br>
+                                            <label class="mx-2 my-1">密碼</label>
+                                            <input class="mx-2 my-1" type="text"><br>        
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn">輸入</button>
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">關閉</button>
+                                            <button type="submit" class="btn btn-primary">送出</button>
+                                        </div>
+                                    </form>
+                              </div>
+                            </div>
+                        </div>
+                        <!-- 第二顆按鈕 -->
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">註冊</button>
+                        <div class="modal fade" id="staticBackdrop2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel2" aria-hidden="true">
+                            <div class="modal-dialog">
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <h5 class="modal-title text-dark" id="staticBackdropLabel2">註冊</h5>
+                                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+
+                                    <form class="text-dark">
+                                        <div class="modal-body">
+                                            <label class="mx-2 my-1">帳號</label>
+                                            <input class="mx-2 my-1" type="text"><br>
+                                            <label class="mx-2 my-1">密碼</label>
+                                            <input class="mx-2 my-1" type="text"><br>
+                                            <label class="mx-2 my-1">信箱</label>
+                                            <input class="mx-2 my-1" type="text"><br>         
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn">輸入</button>
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">關閉</button>
+                                            <button type="submit" class="btn btn-primary">送出</button>
+                                        </div>
+                                    </form>
+                              </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
