--- a/PocketRoamingHTML/html/cart.html
+++ b/PocketRoamingHTML/html/cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../bootstrap5/css/bootstrap.css" rel="stylesheet">
-    <!-- <link href="../css/index.css" rel="stylesheet"> -->
+    <link href="../css/index.css" rel="stylesheet">
     <script src="../bootstrap5/js/bootstrap.js"></script>
     <script src="../js/jquery.js"></script>
     <title>Document</title>
@@ -20,19 +20,13 @@
                 <!-- nav nav-pills -->
                 <!-- data-bs-toggle="pill" -->
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="./index.html">首頁</a>
+                  <a class="nav-link text-white" href="#">Link</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="./index.html">租借流程</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="./index.html">聊天室</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-white"  href="./html/member.html">會員</a>
+                  <a class="nav-link text-white"  href="#">Link</a>
                 </li>                
                 <li class="nav-item">
-                  <a class="nav-link text-white"  href="./html/cart.html">購物車</a>
+                  <a class="nav-link text-white"  href="./html/member.html">會員</a>
                 </li>
             </ul>
             <!-- 靠右 -->
@@ -97,54 +91,8 @@
         </div>
     </nav>
     <!-- main-body -->
-    <div class="row">
-        <!-- 左側導覽列 -->
-        <div class="col-3 ">
-            <div class="mx-3 my-3 px-3 py-3 border border-3 border-dark">
-                <ul class="nav flex-column nav-tabs">
-                    <li class="nav-item">
-                        <a class="nav-link " data-bs-toggle="tab" href="#tab1">Link</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" data-bs-toggle="tab" href="#tab2">Link</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" data-bs-toggle="tab" href="#tab3">Link</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
 
-        <!-- 標籤內容 -->
-        <div class="col-9 ">
-            <div class="mx-3 my-3 px-3 py-3" id="myTab">
-                <div class="tab-content">
-                    <div class="tab-pane fade " id="tab1">
-                        <h1>第一頁</h1>
-                    </div>
-                    <div class="tab-pane fade" id="tab2">
-                        <h1>第二頁</h1>
-                    </div>
-                    <div class="tab-pane fade" id="tab3">
-                        <h1>第三頁</h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-
-
-
-
-    </div>
-
-
-
-
-
-
-
+    
     <!-- foot -->
     <a href="javascript:window.scrollTo(0,0)">
         <footer class="footer bg-secondary text-center text-white mt-auto fixed-bottom">
