--- a/PocketRoamingHTML/index.html
+++ b/PocketRoamingHTML/index.html
@@ -344,8 +344,4 @@
     </script>
 </body>
 </html>
-<<<<<<< HEAD
-<!-- cat -->
-=======
-<!-- hellohowareyou -->
->>>>>>> 4257d0e907c0f8260a8953066e4e65b31153af79
+<!-- dog -->
