--- a/PocketRoamingHTML/html/member.html
+++ b/PocketRoamingHTML/html/member.html
@@ -7,6 +7,8 @@
     <!-- <link href="../css/index.css" rel="stylesheet"> -->
     <script src="../bootstrap5/js/bootstrap.js"></script>
     <script src="../js/jquery.js"></script>
+
+    
     <title>Document</title>
 </head>
 <body>
@@ -20,7 +22,7 @@
                 <!-- nav nav-pills -->
                 <!-- data-bs-toggle="pill" -->
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="./index.html">首頁</a>
+                  <a class="nav-link text-white" href="../index.html">首頁</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="./index.html">租借流程</a>
@@ -100,25 +102,25 @@
     <div class="row">
         <!-- 左側導覽列 -->
         <div class="col-3 ">
-            <div class="mx-3 my-3 px-3 py-3 border border-3 border-dark">
+            <div class="mx-3 my-3 px-3 py-3 border border-3 border-dark" style="border-radius: 15px;">
                 <ul class="nav flex-column nav-tabs">
-                    <li class="nav-item">
-                        <a class="nav-link " data-bs-toggle="tab" href="#tab1">會員資料</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" id="nav-member-tab"  data-bs-toggle="tab" aria-current="page" href="#tab1" aria-selected="true">會員資料</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " data-bs-toggle="tab" href="#tab2">許願清單</a>
+                        <a class="nav-link " data-bs-toggle="tab" href="#tab2" aria-selected="false">許願清單</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" data-bs-toggle="tab" href="#tab3">上架商品</a>
+                      <a class="nav-link" data-bs-toggle="tab" href="#tab3" aria-selected="false">上架商品</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" data-bs-toggle="tab" href="#tab4">已接收訂單</a>
+                      <a class="nav-link" data-bs-toggle="tab" href="#tab4" aria-selected="false">已接收訂單</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-bs-toggle="tab" href="#tab5">下訂訂單</a>
+                        <a class="nav-link" data-bs-toggle="tab" href="#tab5" aria-selected="false">下訂訂單</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-bs-toggle="tab" href="#tab6">管理者後台</a>
+                        <a class="nav-link" data-bs-toggle="tab" href="#tab6" aria-selected="false">管理者後台</a>
                     </li>
                 </ul>
             </div>
@@ -128,18 +130,27 @@
         <div class="col-9 ">
             <div class="mx-3 my-3 px-3 py-3" id="myTab">
                 <div class="tab-content">
-                    <div class="tab-pane fade " id="tab1">
-                        <h1>第一頁</h1>
+                    <!-- 會員資料 -->
+                    <div class="tab-pane fade " id="tab1" aria-labelledby="nav-member-tab">
+                        <div>
+                            <div class="card text-dark text-center">
+                                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava2-bg.webp"class="rounded-circle img-fluid" style="width: 100px;" />
+                            </div>
+                        </div>
                     </div>
+                    <!-- 上架商品 -->
                     <div class="tab-pane fade" id="tab2">
                         <h1>第二頁</h1>
                     </div>
+                    <!-- 已接收訂單 -->
                     <div class="tab-pane fade" id="tab3">
                         <h1>第三頁</h1>
                     </div>
+                    <!-- 下訂訂單 -->
                     <div class="tab-pane fade" id="tab4">
                         <h1>第四頁</h1>
                     </div>
+                    <!-- 管理者後台 -->
                     <div class="tab-pane fade" id="tab5">
                         <h1>第五頁</h1>
                     </div>
@@ -149,12 +160,6 @@
                 </div>
             </div>
         </div>
-
-
-
-
-
-
     </div>
 
     <!-- foot -->
