--- a/PocketRoamingHTML/html/member_test.html
+++ b/PocketRoamingHTML/html/member_test.html
@@ -101,66 +101,30 @@
     <!-- main-body -->
     <div class="row">
         <!-- 左側導覽列 -->
-        <div class="col-3 ">
-            <div class="mx-3 my-3 px-3 py-3 border border-3 border-dark" style="border-radius: 15px;" >
-                <ul class="nav flex-column nav-tabs">
-                    <li class="nav-item ">
-                        <a class="nav-link " id="nav-member-tab" role="tab" data-bs-toggle="tab" aria-controls="tab1" href="#tab1" aria-selected="true">會員資料</a>
-                    </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link " data-bs-toggle="tab" href="#tab2" aria-selected="false">許願清單</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" data-bs-toggle="tab" href="#tab3" aria-selected="false">上架商品</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" data-bs-toggle="tab" href="#tab4" aria-selected="false">已接收訂單</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-bs-toggle="tab" href="#tab5" aria-selected="false">下訂訂單</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-bs-toggle="tab" href="#tab6" aria-selected="false">管理者後台</a>
-                    </li> -->
-                </ul>
+        <nav>
+            <div class="nav nav-tabs" id="nav-tab" role="tablist">
+              <a class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Home</a>
+              <a class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Profile</a>
+              <a class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">Contact</a>
             </div>
-        </div>
-
-        <!-- 標籤內容 -->
-        <div class="col-9 ">
-            <div class="mx-3 my-3 px-3 py-3" id="myTab">
-                <div class="tab-content">
-                    <!-- 會員資料 -->
-                    <div class="tab-pane fade" role="tabpanel" id="tab1" aria-labelledby="nav-member-tab">
-                        <div>
-                            <div class="card text-dark text-center">
-                                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava2-bg.webp"class="rounded-circle img-fluid" style="width: 100px;" />
-                            </div>
-                        </div>
-                    </div>
-                    <!-- 上架商品 -->
-                    <!-- <div class="tab-pane fade" id="tab2">
-                        <h1>第二頁</h1>
-                    </div> -->
-                    <!-- 已接收訂單 -->
-                    <!-- <div class="tab-pane fade" id="tab3">
-                        <h1>第三頁</h1>
-                    </div> -->
-                    <!-- 下訂訂單 -->
-                    <!-- <div class="tab-pane fade" id="tab4">
-                        <h1>第四頁</h1>
-                    </div> -->
-                    <!-- 管理者後台 -->
-                    <!-- <div class="tab-pane fade" id="tab5">
-                        <h1>第五頁</h1>
-                    </div> -->
-                    <!-- <div class="tab-pane fade" id="tab6">
-                        <h1>第六頁</h1>
-                    </div> -->
-                </div>
+          </nav>
+          <div class="tab-content" id="nav-tabContent">
+            
+            <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
+              <p>clicked profile</p>
+              <p>clicked profile</p>
+              <p>clicked profile</p>
             </div>
-        </div>
-    </div>
+            <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
+              <p>clicked contact</p>
+              <p>clicked contact</p>
+              <p>clicked contact</p>
+            </div>
+            <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+              <p>clicked home</p>
+          <p>clicked home</p>
+          <p>clicked home</p>
+            </div>
 
     <!-- foot -->
     <a href="javascript:window.scrollTo(0,0)">
