--- a/PocketRoamingHTML/html/cart.html
+++ b/PocketRoamingHTML/html/cart.html
@@ -20,13 +20,19 @@
                 <!-- nav nav-pills -->
                 <!-- data-bs-toggle="pill" -->
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="#">Link</a>
+                  <a class="nav-link text-white" href="../index.html">首頁</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white"  href="#">Link</a>
-                </li>                
+                    <a class="nav-link text-white" href="./index.html">租借流程</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="./index.html">聊天室</a>
+                </li>
                 <li class="nav-item">
                   <a class="nav-link text-white"  href="./html/member.html">會員</a>
+                </li>                
+                <li class="nav-item">
+                  <a class="nav-link text-white"  href="./cart.html">購物車</a>
                 </li>
             </ul>
             <!-- 靠右 -->
