--- a/PocketRoamingHTML/html/chat.html
+++ b/PocketRoamingHTML/html/chat.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../bootstrap5/css/bootstrap.css" rel="stylesheet">
-    <link href="../css/index.css" rel="stylesheet">
+    <!-- <link href="../css/index.css" rel="stylesheet"> -->
     <script src="../bootstrap5/js/bootstrap.js"></script>
     <script src="../js/jquery.js"></script>
+
+    
     <title>Document</title>
 </head>
 <body>
@@ -26,7 +28,7 @@
                     <a class="nav-link text-white" href="./index.html">租借流程</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="./index.html">聊天室</a>
+                    <a class="nav-link text-white" href="./chat.html">聊天室</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white"  href="./member.html">會員</a>
@@ -97,8 +99,10 @@
         </div>
     </nav>
     <!-- main-body -->
+    <div class="row">
 
-    
+    </div>
+
     <!-- foot -->
     <a href="javascript:window.scrollTo(0,0)">
         <footer class="footer bg-secondary text-center text-white mt-auto fixed-bottom">
