--- a/PocketRoamingHTML/html/member.html
+++ b/PocketRoamingHTML/html/member.html
@@ -31,7 +31,7 @@
                     <a class="nav-link text-white" href="./index.html">聊天室</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white"  href="./html/member.html">會員</a>
+                  <a class="nav-link text-white"  href="./member.html">會員</a>
                 </li>                
                 <li class="nav-item">
                   <a class="nav-link text-white"  href="./cart.html">購物車</a>
@@ -105,25 +105,25 @@
             <div class="mx-3 my-3 px-3 py-3 border border-3 border-dark" style="border-radius: 15px;" >
                 <ul class="nav flex-column nav-pills nav-fill">
                     <li class="nav-item ">
-                        <a class="nav-link active" id="nav-member-tab"  data-bs-toggle="tab" aria-controls="tab1" href="#tab1" aria-selected="true">會員資料</a>
+                        <a class="nav-link active" id="nav-member-tab"   aria-controls="tab1" href="./member_profile.html" aria-selected="true">會員資料</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " data-bs-toggle="tab" href="#tab2" aria-selected="false">交易紀錄</a>
+                        <a class="nav-link " href="./member_traderecord.html" aria-selected="false">交易紀錄</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " data-bs-toggle="tab" href="#tab3" aria-selected="false">許願清單</a>
+                        <a class="nav-link "   href="./member_wishlist.html" aria-selected="false">許願清單</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" data-bs-toggle="tab" href="#tab4" aria-selected="false">上架商品</a>
+                      <a class="nav-link"   href="./member_uploadproduct.html" aria-selected="false">上架商品</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" data-bs-toggle="tab" href="#tab5" aria-selected="false">已接收訂單</a>
+                      <a class="nav-link"   href="./member_receiveorder.html" aria-selected="false">已接收訂單</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-bs-toggle="tab" href="#tab6" aria-selected="false">下訂訂單</a>
+                        <a class="nav-link"   href="./member_myorder.html" aria-selected="false">下訂訂單</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-bs-toggle="tab" href="#tab7" aria-selected="false">管理者後台</a>
+                        <a class="nav-link"   href="./member_backstage.html" aria-selected="false">管理者後台</a>
                     </li>
                 </ul>
             </div>
@@ -145,28 +145,6 @@
                                 </button>
                             </div>
                         </div>
-                    </div>
-                    <!-- 上架商品 -->
-                    <div class="tab-pane fade" id="tab2">
-                        <h1>第二頁</h1>
-                    </div>
-                    <!-- 已接收訂單 -->
-                    <div class="tab-pane fade" id="tab3">
-                        <h1>第三頁</h1>
-                    </div>
-                    <!-- 下訂訂單 -->
-                    <div class="tab-pane fade" id="tab4">
-                        <h1>第四頁</h1>
-                    </div>
-                    <!-- 管理者後台 -->
-                    <div class="tab-pane fade" id="tab5">
-                        <h1>第五頁</h1>
-                    </div>
-                    <div class="tab-pane fade" id="tab6">
-                        <h1>第六頁</h1>
-                    </div>
-                    <div class="tab-pane fade" id="tab7">
-                        <h1>第六頁</h1>
                     </div>
                 </div>
             </div>
