--- a/PocketRoamingHTML/index.html
+++ b/PocketRoamingHTML/index.html
@@ -26,7 +26,7 @@
                     <a class="nav-link text-white" href="./index.html">租借流程</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="./index.html">聊天室</a>
+                    <a class="nav-link text-white" href="./chat.html">聊天室</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white"  href="./html/member.html">會員</a>
