--- a/PocketRoamingHTML/html/cart.html
+++ b/PocketRoamingHTML/html/cart.html
@@ -23,16 +23,16 @@
                   <a class="nav-link text-white" href="../index.html">首頁</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="./index.html">租借流程</a>
+                    <a class="nav-link text-white" href="../index.html">租借流程</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="./index.html">聊天室</a>
+                    <a class="nav-link text-white" href="./chat.html">聊天室</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white"  href="./member.html">會員</a>
                 </li>                
                 <li class="nav-item">
-                  <a class="nav-link text-white"  href="./cart.html">購物車</a>
+                  <a class="nav-link text-white active"  href="./cart.html">購物車</a>
                 </li>
             </ul>
             <!-- 靠右 -->
@@ -97,6 +97,43 @@
         </div>
     </nav>
     <!-- main-body -->
+    <div class="row">
+        <div class="col-11 mx-auto table-responsive py-3 ">
+            <!-- 一個商品 -->
+            <div class="card rounded-3 mb-4">
+                <div class="card-body p-2">
+                    <div class="row d-flex justify-content-between align-items-center px-3">
+                        <img class="img-fluid rounded-3" style="height:100px;width:auto;" src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/3.webp">
+                        <div class="col-1">
+                            <p class="lead fw-normal mb-2">我是商品名字</p>
+                            <p class="text-muted">我是上架者</p>
+                        </div>
+                        <div class="col-1">
+                            <p class="lead fw-normal mb-2">狀態</p>
+                            <p class="text-muted">可購買</p>
+                        </div>
+                        <div class="col-1 d-flex">
+                            <select class="form-select"><option>運送方式</option></select>
+                        </div>
+                        <div class="col-1 d-flex">
+                            <select class="form-select"><option>歸還方式</option></select>
+                        </div>
+                        <div class="col-1 d-flex px-1 ">
+                            <select class="form-select"><option>租借日期</option><option>7天</option><option>14天</option><option>1月</option></select>
+                        </div>
+                        <div class="col-1 offset-lg-1">
+                            $1000
+                        </div>
+                        <div class="col-1 text-end">
+                            <button value="">刪除</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--商品結束  -->
+
+        </div>
+    </div>
 
     
     <!-- foot -->
