--- a/PocketRoamingHTML/html/chat.html
+++ b/PocketRoamingHTML/html/chat.html
@@ -25,7 +25,7 @@
                   <a class="nav-link text-white" href="../index.html">首頁</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="./index.html">租借流程</a>
+                    <a class="nav-link text-white" href="../index.html">租借流程</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="./chat.html">聊天室</a>
@@ -100,9 +100,14 @@
     </nav>
     <!-- main-body -->
     <div class="row">
+        <!-- 聊天列表 -->
+        <div class="col-3">
+
+        </div class="col-9">
+        <!-- 聊天內容 -->
+
 
     </div>
-
     <!-- foot -->
     <a href="javascript:window.scrollTo(0,0)">
         <footer class="footer bg-secondary text-center text-white mt-auto fixed-bottom">
