--- a/PocketRoamingHTML/html/member_wishlist.html
+++ b/PocketRoamingHTML/html/member_wishlist.html
@@ -31,7 +31,7 @@
                     <a class="nav-link text-white" href="./index.html">聊天室</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white"  href="./member.html">會員</a>
+                  <a class="nav-link text-white active"  href="./member.html">會員</a>
                 </li>                
                 <li class="nav-item">
                   <a class="nav-link text-white"  href="./cart.html">購物車</a>
@@ -132,11 +132,9 @@
         <!-- 標籤內容 -->
         <div class="col-9 ">
             <div class="mx-3 my-3 px-3 py-3" id="myTab">
-                <div class="mx-3 my-3 px-3 py-3 text-dark" id="myTab">
-                    <!-- 管理者後台 -->
-                    <div class="text-dark " id="tab2">
-                        <h1>許願清單</h1>
-                    </div>
+                <!-- 管理者後台 -->
+                <div class="text-dark " id="tab2">
+                    <h1>許願清單</h1>
                 </div>
             </div>
         </div>
