--- a/PocketRoamingHTML/html/member_profile.html
+++ b/PocketRoamingHTML/html/member_profile.html
@@ -31,7 +31,7 @@
                     <a class="nav-link text-white" href="./index.html">聊天室</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white"  href="./member.html">會員</a>
+                  <a class="nav-link text-white active"  href="./member.html">會員</a>
                 </li>                
                 <li class="nav-item">
                   <a class="nav-link text-white"  href="./cart.html">購物車</a>
@@ -139,7 +139,7 @@
                         <h4 class="my-2">Julie L. Arsenault</h4>
                         <p>ewdewdwdwedwedwedwedwedwedwedwedwedwedaadzxc</p>
                         <button type="button" class="btn btn-primary btn-rounded btn-lg">
-                            Message now
+                            聊天
                         </button>
                     </div>
                 </div>
