--- a/PocketRoamingHTML/html/member_uploadproduct.html
+++ b/PocketRoamingHTML/html/member_uploadproduct.html
@@ -31,7 +31,7 @@
                     <a class="nav-link text-white" href="./index.html">聊天室</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white"  href="./member.html">會員</a>
+                  <a class="nav-link text-white active"  href="./member.html">會員</a>
                 </li>                
                 <li class="nav-item">
                   <a class="nav-link text-white"  href="./cart.html">購物車</a>
