--- a/PocketRoamingHTML/index.html
+++ b/PocketRoamingHTML/index.html
@@ -26,7 +26,7 @@
                     <a class="nav-link text-white" href="./index.html">租借流程</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="./chat.html">聊天室</a>
+                    <a class="nav-link text-white" href="./html/chat.html">聊天室</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white"  href="./html/member.html">會員</a>
@@ -74,12 +74,14 @@
                                 </div>
 
                                     <form class="text-dark">
-                                        <div class="modal-body">
-                                            <label class="mx-2 my-1">帳號</label>
+                                        <div class="modal-body ">
+                                            <label class="mx-2 my-1">帳號　　　　:</label>
                                             <input class="mx-2 my-1" type="text"><br>
-                                            <label class="mx-2 my-1">密碼</label>
+                                            <label class="mx-2 my-1">密碼　　　　:</label>
                                             <input class="mx-2 my-1" type="text"><br>
-                                            <label class="mx-2 my-1">信箱</label>
+                                            <label class="mx-2 my-1">再次確認密碼:</label>
+                                            <input class="mx-2 my-1" type="text"><br>
+                                            <label class="mx-2 my-1">信箱　　　　:</label>
                                             <input class="mx-2 my-1" type="text"><br>         
                                         </div>
                                         <div class="modal-footer">
