--- a/PocketRoamingHTML/html/cart.html
+++ b/PocketRoamingHTML/html/cart.html
@@ -101,7 +101,7 @@
         <div class="col-11 mx-auto table-responsive py-3 ">
             <!-- 一個商品 -->
             <div class="card rounded-3 mb-4">
-                <div class="card-body p-2">
+                <div class="card-body p-2 ">
                     <div class="row d-flex justify-content-between align-items-center px-3">
                         <img class="img-fluid rounded-3" style="height:100px;width:auto;" src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/3.webp">
                         <div class="col-1">
@@ -125,7 +125,7 @@
                             $1000
                         </div>
                         <div class="col-1 text-end">
-                            <button value="">刪除</button>
+                            <button class="btn border-1 border-dark bg-info text-white" value="">刪除</button>
                         </div>
                     </div>
                 </div>
