--- a/PocketRoamingHTML/html/chat.html
+++ b/PocketRoamingHTML/html/chat.html
@@ -15,7 +15,7 @@
     <!-- top-navbar navbar navbar-expand-sm navbar-dark bg-dark -->
     <nav class="navbar navbar-expand bg-info text-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="./index.html">
+            <a class="navbar-brand" href="../index.html">
                 <img src="../img/LOGO03.png" style="height:30px; width:auto;">
             </a>
             <ul class="nav nav-pills me-auto te mx-1">
@@ -28,7 +28,7 @@
                     <a class="nav-link text-white" href="../index.html">租借流程</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="./chat.html">聊天室</a>
+                    <a class="nav-link text-white active" href="./chat.html">聊天室</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white"  href="./member.html">會員</a>
@@ -99,14 +99,89 @@
         </div>
     </nav>
     <!-- main-body -->
-    <div class="row">
-        <!-- 聊天列表 -->
+    <div class="row chat-content">
+        <!-- 聊天側列表 -->
         <div class="col-3">
-
-        </div class="col-9">
+            <div class="mx-3 my-3">
+                <ul class="chat-list list-unstyled">
+                    <!-- 使用者 -->
+                    <li class="p-1 ">
+                        <a href="#" class="card ">
+                            <div class="card-body">
+                                <div class="d-flex align-items-center mb-1 justify-content-between ">
+                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp" alt="avatar" class="d-flex align-self-center me-3" width="60">
+                                        <div class="">
+                                            <h6 class="text-truncate mb-0 me-auto">使用者??</h6>
+                                            <p class="small text-muted">Hello, Are you there?</p>
+                                        </div>
+                                        <div class="pt-1">
+                                            <p class="small text-muted mb-1">Just now</p>
+                                            <span class="badge bg-danger rounded-pill">3</span>
+                                        </div>
+                                    <button class="btn">隱藏</button>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <!-- 使用者 -->
+                    <!-- 使用者 -->
+                    <li class="p-1 ">
+                        <a href="#" class="card ">
+                            <div class="card-body">
+                                <div class="d-flex align-items-center mb-1 justify-content-between ">
+                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp" alt="avatar" class="d-flex align-self-center me-3" width="60">
+                                        <div class="">
+                                            <h6 class="text-truncate mb-0 me-auto">使用者??</h6>
+                                            <p class="small text-muted">Hello, Are you there?</p>
+                                        </div>
+                                        <div class="pt-1">
+                                            <p class="small text-muted mb-1">Just now</p>
+                                            <span class="badge bg-danger rounded-pill">3</span>
+                                        </div>
+                                    <button class="btn">隱藏</button>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <!-- 使用者 -->
+                <ul>
+            </div>
+        </div>
         <!-- 聊天內容 -->
-
-
+        <div class="col-9">
+            <div class="px-4 py-4">
+                <!-- 對方聊天訊息 -->
+                <div class="d-flex flex-row justify-content-start">
+                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava6-bg.webp"
+                      alt="avatar 1" style="width: 45px; height: 100%;">
+                    <div>
+                      <p class="small p-2 ms-3 mb-1 rounded-3" style="background-color: #f5f6f7;">這是對方訊息</p>
+                      <p class="small ms-3 mb-3 rounded-3 text-muted float-end">12:00 PM | Aug 13</p>
+                    </div>
+                </div>
+                <!-- 對方訊息結束 -->
+                <!-- 我方訊息開始 -->
+                <div class="d-flex flex-row justify-content-end">
+                    <div>
+                      <p class="small p-2 me-3 mb-1 text-white rounded-3 bg-primary">這是我方訊息</p>
+                      <p class="small me-3 mb-3 rounded-3 text-muted">12:00 PM | Aug 13</p>
+                    </div>
+                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
+                      alt="avatar 1" style="width: 45px; height: 100%;">
+                  </div>
+                <!-- 我方訊息結束 -->
+            </div>
+            <div class="mt-auto position-absolute border-top border-3 bottom-0 end-0  py-2  col-9 ">
+                <div class="container-fluid">
+                    <div class="input-group align-items-center my-3">
+                        <input type="text" class="form-control border-0 pl-0" placeholder="請輸入訊息...">
+                        <button type="submit" class="btn btn-primary rounded-3 my-2">
+							<span class="d-none d-md-inline-block me-2">Send</span>
+						</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- foot -->
     <a href="javascript:window.scrollTo(0,0)">
