--- a/PocketRoamingHTML/html/member_uploadproduct.html
+++ b/PocketRoamingHTML/html/member_uploadproduct.html
@@ -25,10 +25,10 @@
                   <a class="nav-link text-white" href="../index.html">首頁</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="./index.html">租借流程</a>
+                    <a class="nav-link text-white" href="../index.html">租借流程</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="./index.html">聊天室</a>
+                    <a class="nav-link text-white" href="./chat.html">聊天室</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white active"  href="./member.html">會員</a>
@@ -115,6 +115,9 @@
                             <a class="nav-link "   href="./member_wishlist.html" aria-selected="false">許願清單</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link"   href="./member_myproduct.html" aria-selected="false">我的商品</a>
+                        </li>
+                        <li class="nav-item">
                           <a class="nav-link active"   href="./member_uploadproduct.html" aria-selected="false">上架商品</a>
                         </li>
                         <li class="nav-item">
@@ -135,7 +138,12 @@
             <div class="mx-3 my-3 px-3 py-3 text-dark" id="myTab">
                 <!-- 上架商品 -->
                 <div class="text-dark " id="tab2">
-                    <h1>上架商品</h1>
+                    <h1>(上架商品) 商品名字 商品簡述 商品分類 價格 商品圖片 </h1>
+                </div>
+                <div>
+                    <form>
+                        
+                    </form>
                 </div>
             </div>
         </div>
