--- a/PocketRoamingHTML/html/chat.html
+++ b/PocketRoamingHTML/html/chat.html
@@ -173,7 +173,7 @@
             </div>
             <div class="mt-auto position-absolute border-top border-3 bottom-0 end-0  py-2  col-9 ">
                 <div class="container-fluid">
-                    <div class="input-group align-items-center my-3">
+                    <div class="input-group align-items-center mb-4">
                         <input type="text" class="form-control border-0 pl-0" placeholder="請輸入訊息...">
                         <button type="submit" class="btn btn-primary rounded-3 my-2">
 							<span class="d-none d-md-inline-block me-2">Send</span>
