--- a/PocketRoamingHTML/html/member.html
+++ b/PocketRoamingHTML/html/member.html
@@ -114,6 +114,9 @@
                         <a class="nav-link "   href="./member_wishlist.html" aria-selected="false">許願清單</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link"   href="./member_myproduct.html" aria-selected="false">我的商品</a>
+                    </li>
+                    <li class="nav-item">
                       <a class="nav-link"   href="./member_uploadproduct.html" aria-selected="false">上架商品</a>
                     </li>
                     <li class="nav-item">
