--- a/PocketRoamingHTML/html/member_receiveorder.html
+++ b/PocketRoamingHTML/html/member_receiveorder.html
@@ -25,10 +25,10 @@
                   <a class="nav-link text-white" href="../index.html">首頁</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="./index.html">租借流程</a>
+                    <a class="nav-link text-white" href="../index.html">租借流程</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="./index.html">聊天室</a>
+                    <a class="nav-link text-white" href="./chat.html">聊天室</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white active"  href="./member.html">會員</a>
@@ -112,6 +112,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link "   href="./member_wishlist.html" aria-selected="false">許願清單</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link"   href="./member_myproduct.html" aria-selected="false">我的商品</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link"   href="./member_uploadproduct.html" aria-selected="false">上架商品</a>
