--- a/PocketRoamingHTML/html/member_receiveorder.html
+++ b/PocketRoamingHTML/html/member_receiveorder.html
@@ -135,9 +135,43 @@
         <!-- 標籤內容 -->
         <div class="col-9 ">
             <div class="mx-3 my-3 px-3 py-3 text-dark" id="myTab">
-                <!-- 已接收訂單 -->
+                <!-- 已接收訂單 租借者 下訂日期 租借天數 金額 訂單狀態-->
                 <div class="text-dark " id="tab2">
                     <h1>已接收訂單 </h1>
+                </div>
+                <div>
+                    <!-- 一筆訂單 -->
+                    <div class="card my-2">
+                        <div class="card-body d-flex justify-content-between">
+                            <a href="#" class="link btn bg-info text-white">租借者ID</a>
+                            <h5>下訂日期</h5>
+                            <h5>租借天數</h5>
+                            <h5>金額</h5>
+                            <h5>商品狀態</h5>
+                            <div class="btn-group">
+                                <button class="btn btn-primary rounded-4">明細</button>
+                                <button class="btn btn-info rounded-4">同意</button>
+                                <button class="btn btn-dark rounded-4">拒絕</button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 一筆訂單結束 -->
+
+                    <div class="card my-2">
+                        <div class="card-body d-flex justify-content-between">
+                            <a href="#" class="link btn bg-info text-white">租借者ID</a>
+                            <h5>下訂日期</h5>
+                            <h5>租借天數</h5>
+                            <h5>金額</h5>
+                            <h5>商品狀態</h5>
+                            <div class="btn-group">
+                                <button class="btn btn-primary rounded-4">明細</button>
+                                <button class="btn btn-info rounded-4">同意</button>
+                                <button class="btn btn-dark rounded-4">拒絕</button>
+                            </div>
+                        </div>
+                    </div>
+                       
                 </div>
             </div>
         </div>
